fix(ui-elements): Fix lineHeight default in TruncateText
Fixes INSTUI-1280

Notes:
This change makes TruncateText explicitly use its theme's fontFamily so we
can better control lineHeight based calculations in the Truncator util.
Truncator has been updated with a prop to facilitate this change and allow
for other edge case adjustments.

Test plan:
- Create a div with a lineHeight style set to 'normal', and/or test in a context
that does not explicitly set a particular line height (codepen).
- In that context, create a TruncateText as a child of a Text with size="large"
- Ensure the text is visible, truncated or otherwise.
- Unit tests should pass

Reviewed-on: https://gerrit.instructure.com/152571
Tested-by: Jenkins
Product-Review: Jennifer Stern <jstern@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-elements/src/components/TruncateText/styles.css
+++ b/packages/ui-elements/src/components/TruncateText/styles.css
@@ -26,6 +26,7 @@
   display: block;
   overflow: hidden;
   word-wrap: break-word;
+  font-family: var(--fontFamily);
 }
 
 .auto {
